--- a/client/src/styles/components/_footer.scss
+++ b/client/src/styles/components/_footer.scss
@@ -1,6 +1,8 @@
 footer {
 	background-color: $main;
 	padding: 30px 0;
+	z-index: 10000;
+	position: relative;
 
 	text-align: center;
 	.container {
