--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -338,6 +338,8 @@ input:focus {
 footer {
   background-color: #5329bd;
   padding: 30px 0;
+  z-index: 10000;
+  position: relative;
   text-align: center;
 }
 
@@ -369,7 +371,7 @@ footer .container .wrapper > *:not(:first-child) {
 
 #bottom-console .container {
   background-color: #5329bd;
-  padding: 15px;
+  overflow: hidden;
   border-radius: 10px;
   -webkit-box-shadow: rgba(0, 0, 0, 0.07) 0px 8px 24px;
           box-shadow: rgba(0, 0, 0, 0.07) 0px 8px 24px;
@@ -383,6 +385,19 @@ footer .container .wrapper > *:not(:first-child) {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+}
+
+#bottom-console .container .wrapper .bc-btn {
+  padding: 15px;
+  text-align: center;
+  cursor: pointer;
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
+  font-size: xx-large;
+}
+
+#bottom-console .container .wrapper .bc-btn:hover {
+  background-color: rgba(255, 255, 255, 0.3);
 }
 
 #register,
@@ -463,6 +478,7 @@ footer .container .wrapper > *:not(:first-child) {
 
 #friend-list-mb {
   padding: 30px 0;
+  min-height: 100vh;
 }
 
 #friend-list-mb .container .wrapper .actions {
@@ -478,7 +494,7 @@ footer .container .wrapper > *:not(:first-child) {
 }
 
 #friend-list-mb .container .wrapper .actions .search-bar {
-  width: 85%;
+  width: 80%;
 }
 
 #friend-list-mb .container .wrapper .actions .create-message {
@@ -506,6 +522,18 @@ footer .container .wrapper > *:not(:first-child) {
 
 #friend-list-mb .container .wrapper .chat-preview-list > *:not(:first-child) {
   margin-top: 20px;
+}
+
+#friend-list-mb .container .wrapper .chat-preview-list .no-chat-display {
+  text-align: center;
+}
+
+#friend-list-mb .container .wrapper .chat-preview-list .no-chat-display > * {
+  margin-top: 10px;
+}
+
+#friend-list-mb .container .wrapper .chat-preview-list .no-chat-display img {
+  width: 200px;
 }
 
 #friend-list-mb .container .wrapper .chat-preview-list .chat-preview {
@@ -582,11 +610,22 @@ footer .container .wrapper > *:not(:first-child) {
   font-size: 14px;
 }
 
-#friend-list-mb .container .wrapper .chat-preview-list .chat-preview .preview-chat-details .time-content {
+#friend-list-mb .container .wrapper .chat-preview-list .chat-preview .preview-chat-details .time-content-read-info {
   text-align: right;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
 }
 
-#friend-list-mb .container .wrapper .chat-preview-list .chat-preview .preview-chat-details .time-content .time {
+#friend-list-mb .container .wrapper .chat-preview-list .chat-preview .preview-chat-details .time-content-read-info .read {
+  margin-right: 5px;
+  color: #5329bd;
+}
+
+#friend-list-mb .container .wrapper .chat-preview-list .chat-preview .preview-chat-details .time-content-read-info .time {
   font-size: 12px;
 }
 
@@ -658,7 +697,7 @@ footer .container .wrapper > *:not(:first-child) {
 }
 
 #messaging .container .wrapper .chat-typing-bar .container .wrapper .chat-input {
-  width: 100%;
+  width: 80%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -682,10 +721,24 @@ footer .container .wrapper > *:not(:first-child) {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: white;
+  background-color: #5329bd;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  cursor: pointer;
+  -webkit-transition: 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  transition: 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
-#messaging .container .wrapper .chat-typing-bar .container .wrapper .send svg {
-  color: #4078c0;
-  padding: 5px;
+#messaging .container .wrapper .chat-typing-bar .container .wrapper .send:hover {
+  -webkit-transform: scale(0.9) rotate(360deg);
+          transform: scale(0.9) rotate(360deg);
 }
 /*# sourceMappingURL=style.css.map */
